# fox-lite-ai-engine

./: .gitignore  README.md  index.html  notes.txt  package-lock.json  package.json  run-local.sh  vite.config.js
scripts/: .endgame-size-cache.json  build-endgame.js  strength-ab.js  verify-blob.js
src/: App.jsx
src/components/: BotHand.jsx  Card.jsx  Hand.jsx  RoundBanner.jsx  Status.jsx  Trick.jsx  Trump.jsx
src/engine/: dde.js  doubleDummy.js  encode.js  endgame-blob.js  endgame-canon.js  endgame.js  game.js  net.js  neural.js  neuralNet.js  nn.js  nnGame.js  pimc.js  random.js
src/styles/: app.css
training/: README.md  bench_forward_batch.py  bench_sweep.sh  bench_train_step.py  cohort.py  config.py  encode.py  export.py  make_forward_fixture.py  net.py  orchestrator.py  promote.py  requirements.txt  run_daemon.sh  test_encode_parity.py  test_onnx_parity.py  train.py
training-awr/: .gitignore  README.md  bench_sweep.sh  elo.py  make_forward_fixture.py  orchestrator.py  requirements.txt  run_daemon.sh  train.py
training-ismcts/: README.md  export.py  make_forward_fixture.py  net.py  orchestrator.py  run_daemon.sh  test_onnx_parity.py  train.py
training-ismcts/selfplay_rs/: Cargo.toml
training-ismcts/selfplay_rs/.cargo/: config.toml
training-ismcts/selfplay_rs/src/: aoti.cpp  aoti.rs  cuda_event.cpp  cuda_event.rs  lib.rs  main.rs  net.rs  pipeline.rs
training/foxlite_core/: Cargo.toml
training/foxlite_core/src/: determinize.rs  encode.rs  lib.rs  mcts.rs
training/foxlite_core/tests/: encode_parity.rs  rules_parity.rs
(+57 files in other folders)
