[package]
name = "selfplay_rs"
version = "0.1.0"
edition = "2021"
description = "100% Rust self-play worker + evaluator (tch forward) for fox-lite-ai-engine"

[lib]
name = "selfplay_rs"
path = "src/lib.rs"

[[bin]]
name = "selfplay_rs"
path = "src/main.rs"

[[bin]]
name = "evaluate_rs"
path = "src/bin/evaluate_rs.rs"

[dependencies]
foxlite_core = { path = "../foxlite_core" }
mimalloc = "0.1"
tch = "0.23"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
