[package]
name = "foxlite_core"
version = "0.1.0"
edition = "2021"
description = "Pure Fox in the Forest Lite rules + canonical NN encoding (no torch, no pyo3)"

[dependencies]
rand = "0.8"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
